Activities: fix visual alignment of columns in Enter Activity Attendance

--- a/themes/Default/css/main.css
+++ b/themes/Default/css/main.css
@@ -1198,6 +1198,10 @@ table.smallIntBorder td.noPadding {
     -webkit-transform: rotate(45deg);
 }
 
+.whitespace-nowrap {
+    white-space: nowrap;
+}
+
 
 @-moz-keyframes spin {
     from {
